// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`discussionBoardSetup is working 1`] = `
Array [
  Array [
    undefined,
    Object {
      "appInstallerName": "itaditya",
    },
  ],
]
`;

exports[`discussionBoardSetup is working 2`] = `
Array [
  Array [
    undefined,
    Object {
      "appInstallerName": "itaditya",
      "username": "itaditya",
    },
  ],
]
`;
